--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.11.16",
     "axios": "^1.3.4",
+    "mui-file-input": "^2.0.0",
     "multer": "^1.4.5-lts.1",
     "react-router-dom": "^6.10.0"
   }
